src/components/App.css
.App {
  text-align: center;
}

.App .invalid {
  background: rgba(193, 59, 56, 0.6);
  border-radius: 5px;
  color: #fff;
  font-size: 14px;
  font-weight: bold;
  padding: 10px;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 20px;
}

.App-header {
  background-color: #333333;
  margin-bottom: 20px;
  padding: 30px;
}

.App-header-inner {
  align-items: center;
  color: #fff;
  display: flex;
  margin-left: auto;
  margin-right: auto;
  max-width: 960px;
}

.App-header img {
  height: 40px;
  margin: -2px 20px;
}

.App-header h2 {
  display: inline-block;
  font-size: 2em;
  font-weight: bold;
  margin-bottom: 0;
}

.App-main {
  box-sizing: border-box;
  margin: auto;
  max-width: 960px;
  padding: 30px 10px;
  width: 100%;
}

.App-main small {
  opacity:0.4;
  font-size: 14px;
}

.App-settings {
  background: #333;
  color: #fff;
  padding-top: 40px;
}

.App-settings h2 {
  font-size: 24px;
  font-weight: bold;
  line-height: 28px;
}

.App-settings-inner {
  margin-left: auto;
  margin-right: auto;
  max-width: 960px;
}

.App-divider {
  padding: 20px;
  margin-bottom: 0px;
  max-width: 600px;
  display: flex;
  flex-flow: row;
}

.App-intro {
  font-size: large;
}

.App-summary {
  position: absolute;
  top: 210px;
  left: 10vw;
  right: 10vw;
  background: rgba(255,255,255,0.8);
  height: 300px;
  margin: auto;
}

.App label {
  width: 50px;
  display: inline-table;
  color: #444;
}

.App {
  flex-flow: column;
  display: flex;
}

.App-sliders {
  background: #333;
  display: flex;
  justify-content: center;
  margin-top: 20px;
  text-align: center;
}

.App section {
  float:left;
  border-radius: 10px;
  margin: 5px;
  padding: 5px;
  border-bottom: 1px dashed #666;
}

.App section > span {
  display: flex;
  flex-direction: row;
  flex: 1;
}

.LegendContainer {
  display: flex;
  margin: 15px 0;
}

.LegendContainer > span {
  display: flex;
  flex-grow: 1;
}

.LegendContainer h1 {
  font-weight: 300;
  font-size: 16px;
  text-align: left;
  white-space: nowrap;
  margin: 0;
  color: #333;
  text-overflow: ellipsis;
  overflow: hidden;
}

.LegendContainer h2 {
  font-size: 16px;
  font-weight: bold;
  text-align: left;
  margin: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #333;
}

.LegendTitle {
  margin-bottom: 15px;
}

.LegendTitle h1, .LegendTitle h2 {
  text-align: center;
  color: #333;
}

.LegendGroup span {
  display: block;
  border: 1px dashed #C1C1C1;
  padding: 5px;
}

.party {
  display: block;
  clear: both;
  background: #333;
  border-radius: 3px;
  padding: 10px;
  cursor: grab;
  margin: 5px;
  position: relative;
}

.party h1, .party h2 {
  color: #fff;
  margin-left: 40px;
  margin-right: 30px;
}

.party.below {
  opacity: 0.5;
}

.party i {
  line-height: 10px;
  float: left;
  display: block;
}
.party i:before {
 content: "•";
 font-size: 120px;
 font-style: normal;
 position: absolute;
 top: 24px;
 left: 0;
}

.party:after {
  content: url(/drag-icon.svg);
  position: absolute;
  right: 15px;
  top: 24px;
}

.LegendGroup {
  flex: 1;
  transition: background ease-in 300ms;
}

.LegendGroup.Drop {
  background: #eee;
}

.party.selected{
  margin-left: -30px;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

.small {
  display: none;
}

@media only screen and (max-width: 900px) {
  .App-main {
    max-width: 100%;
  }

  .wide {
    display: none;
  }

  .small {
    display: block;
  }
}

@media only screen and (max-width: 450px) {
  .LegendGroup span {
    padding: 2px;
  }

  .party {
    padding: 5px;
  }

  .party i:before {
   font-size: 100px;
   top: 20px;
  }

  .party:after {
    top: 20px;
  }

  .party h1, .party h2 {
    margin-left: 32px;
  }
}

@media only screen and (max-width: 350px) {
  .LegendGroup span {
    padding: 0;
  }

  .party h1, .party h2 {
    font-size: 14px;
    margin-left: 30px;
  }

  .party i:before {
   font-size: 80px;
   top: 17px;
  }

  .party:after {
    top: 17px;
    right: 11px;
  }
}

@media only screen and (max-width: 850px) {
  .App-sliders {
    align-items: center;
    flex-direction: column;
  }
}

